--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -571,7 +571,13 @@ a {
     background: #f9f9f9;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 0 8px;
+}
+
+.footer .row-top .social-link:hover {
+    background: #ebebeb;
+    cursor: pointer;
 }
 .footer .row-bottom {
     margin-top: 80px;
