--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -156,12 +156,24 @@ a {
 }
 
 .clients .images {
-    margin-top: 10rem;
+    margin-top: 7rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.clients .images a {
+    padding: 0 42px;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    background: #ffffff;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
 .guides {
     margin-top: 4rem;
     padding: 93px 0 79px;
