--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -580,11 +580,15 @@ a {
 .footer .row-top .social-link {
     width: 28px;
     height: 28px;
+    border-radius: 3px;
     background: #f9f9f9;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 8px;
+}
+
+.footer .social-link + .social-link {
+    margin-left: 16px;
 }
 
 .footer .row-top .social-link:hover {
