--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -66,6 +66,7 @@ a {
     background: #e6f0ff;
     height: calc(100vh - 90px);
     display: flex;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -108,14 +109,10 @@ a {
     border-radius: 0.8rem;
 }
 
-.hero {
-    margin-top: 13rem;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -123,7 +120,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 0.8rem;
     font-weight: 700;
     font-size: 6.4rem;
@@ -131,7 +128,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 3rem;
     font-weight: 400;
     font-size: 1.8rem;
@@ -139,7 +136,7 @@ a {
     color: #5a6473;
 }
 
-.hero .btn-cta {
+.hero-wrap .btn-cta {
     min-width: 17rem;
     margin-top: 4rem;
 }
